@@ -70,7 +70,9 @@ EvtExternalGenFactory* EvtExternalGenFactory::getInstance() {
 
 }
 
-void EvtExternalGenFactory::definePythiaGenerator(std::string xmlDir, bool convertPhysCodes) {
+void EvtExternalGenFactory::definePythiaGenerator(std::string xmlDir, 
+						  bool convertPhysCodes,
+						  bool useEvtGenRandom) {
 
   // Only define the generator if we have the external ifdef variable set
 #ifdef EVTGEN_PYTHIA
@@ -86,7 +88,11 @@ void EvtExternalGenFactory::definePythiaGenerator(std::string xmlDir, bool conve
     report(INFO,"EvtGen")<<"Pythia 8 codes need to be used in decay files"<<endl;
   }
 
-  EvtAbsExternalGen* pythiaGenerator = new EvtPythiaEngine(xmlDir, convertPhysCodes);
+  if (useEvtGenRandom == true) {
+    report(INFO,"EvtGen")<<"Using EvtGen random engine for Pythia 8 as well"<<endl;
+  }
+
+  EvtAbsExternalGen* pythiaGenerator = new EvtPythiaEngine(xmlDir, convertPhysCodes, useEvtGenRandom);
   _extGenMap[genId] = pythiaGenerator;
 
 #endif
